clusters/dev-cluster/components/apps/kubia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
  namespace: kubia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubia
      type: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: kubia
        type: frontend
    spec:
      containers:
      - image: luksa/kubia
        name: kubia
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 80Mi
          limits:
            cpu: 100m
            memory: 100Mi
