clusters/dev-cluster/components/apps/kubia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
  namespace: kubia
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: kubia
    type: frontend
  type: ClusterIP
